hack/samples/07.stack-codecloud.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: git.shuri.labsonline.ca
  name: gitea-ssh
  namespace: cicd
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
  name: gitea-web
  namespace: cicd
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/name: gitea
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: gitea-runner
    app.kubernetes.io/name: gitea-runner
  name: gitea-runner
  namespace: cicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: gitea-runner
      app.kubernetes.io/name: gitea-runner
  template:
    metadata:
      annotations:
        checksum/config: 77220096f969c7c340ac288b9b83bbae020530f9395b9052d2f95a300f34ca15
      labels:
        app.kubernetes.io/instance: gitea-runner
        app.kubernetes.io/name: gitea-runner
    spec:
      containers:
      - image: sanselme/gitea-runner:0.0.1
        livenessProbe: {}
        name: gitea
        readinessProbe: {}
        resources: {}
        volumeMounts:
        - mountPath: /tmp
          name: temp
        - mountPath: /etc/gitea
          name: config
        - mountPath: /var/lib/gitea
          name: data
      securityContext:
        fsGroup: 1000
      volumes:
      - configMap:
          name: gitea-runner-config
        name: config
      - emptyDir: {}
        name: temp
      - name: data
        persistentVolumeClaim:
          claimName: gitea-runner-storage
